--- a/components/css/search.css
+++ b/components/css/search.css
@@ -160,10 +160,11 @@ img {
 
 
 .absolute-center {
-    position: absolute;
+    position: relative;
     margin: 1rem 0 3rem;
     text-align: center;
-    bottom: -60px;
+    /* bottom: -60px; */
+    width: 100%;
 }
 
 a.button {
