--- a/components/css/default.css
+++ b/components/css/default.css
@@ -1011,6 +1011,8 @@ body {
     top: 0;
     bottom: 0;
     margin: auto;
+
+
 }
 
 .slider-container {
@@ -1041,6 +1043,12 @@ body {
 
 }
 .slider-container .slider-tooltip.-active{
+    /*visibility: visible;*/
+    /*opacity: 1;*/
+    visibility: hidden;
+    opacity: 0;
+}
+.slider-container .slider-tooltip.active{
     visibility: visible;
     opacity: 1;
 }
@@ -1069,6 +1077,8 @@ body {
 .ui-widget.ui-widget-content {
     background: none;
     border: none;
+
+
 }
 
 .slider-container .slider-bars .slider-drag{
@@ -1104,18 +1114,27 @@ body {
     top: 0;
     bottom: 0;
     margin: auto 0;
+
+    -moz-transition: all 0.1s;
+    -ms-transition: all 0.1s;
+    -o-transition: all 0.1s;
+    -webkit-transition: all 0.1s;
+    transition: all 0.1s;
 }
 
 #video-progress:hover + #progress-behind{
-    -ms-transform: scale(1,1.9);
-    -webkit-transform: scale(1,1.9);
-    transform: scale(1,1.9);
+    /*-ms-transform: scale(1,1.9);*/
+    /*-webkit-transform: scale(1,1.9);*/
+    /*transform: scale(1,1.9);*/
+    height: 5px;
 }
 #video-progress:hover .ui-widget-header {
     /*background: rgba(110,194,194,1);*/
-    -ms-transform: scale(1,1.9);
-    -webkit-transform: scale(1,1.9);
-    transform: scale(1,1.9);
+    /*-ms-transform: scale(1,1.9);*/
+    /*-webkit-transform: scale(1,1.9);*/
+    /*transform: scale(1,1.9);*/
+    height: 5px;
+    margin-top: -1px;
 }
 
 #video-progress:hover .ui-slider-handle{
@@ -1172,6 +1191,13 @@ body {
 .slider-container .slider-bars .ui-widget-header {
     /*background: rgba(110,194,194,1);*/
     background: #fcb501;
+
+    -moz-transition: all 0.1s;
+    -ms-transition: all 0.1s;
+    -o-transition: all 0.1s;
+    -webkit-transition: all 0.1s;
+    transition: all 0.1s;
+
 }
 
 /* -! time display */
